servicios importados dede page y pasados como input a los components

--- a/src/app/shares/menu/menu.component.html
+++ b/src/app/shares/menu/menu.component.html
@@ -7,7 +7,7 @@
   </div>
   <span class="newstyle">Hospital Center</span>
   <span class="example-spacer"></span>
-
+   Welcom: {{user.email}}
   <app-menu-submenu  ></app-menu-submenu>
 
   
