--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -2,7 +2,7 @@
 
     <app-diveresponsive (smolldivice) = "drawer.toggle()"></app-diveresponsive>    
     <header>
-        <app-menu (newclick)="drawer.toggle()" ></app-menu>
+        <app-menu   [user]="user"   (newclick)="drawer.toggle()" ></app-menu>
     </header>
     
         <mat-drawer-container class="example-container" autosize>
