variables con emiters

--- a/src/app/shares/menu-submenu/menu-submenu.component.html
+++ b/src/app/shares/menu-submenu/menu-submenu.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!active; else elseTemplate">
+<ng-container *ngIf="!login; else elseTemplate">
     <!-- <a  mat-raised-button color="primary" [routerLink]="['/login']">
         <mat-icon class = "menu-icon" >login</mat-icon>
     </a> -->
