--- a/src/app/shares/sidebar/sidebar.component.html
+++ b/src/app/shares/sidebar/sidebar.component.html
@@ -1,3 +1,5 @@
+<label  *ngIf="user" >{{user.email}} 
+  {{user.name}}</label>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
   <!-- This is the tree node template for leaf nodes -->
   <!-- There is inline padding applied to this node using styles.
