--- a/src/app/common-pages/nopagefound/nopagefound.component.css
+++ b/src/app/common-pages/nopagefound/nopagefound.component.css
@@ -21,7 +21,7 @@ Error Page
 .error-box {
     height: 100%;
     position: fixed;
-    background: url(../../assets/img/background/error-bg.jpg) no-repeat center center #fff;
+    background: url(../../../assets/img/background/error-bg.jpg) no-repeat center center #fff;
     width: 100%; 
     text-align: center;
   }
