--- a/src/app/shares/menu-submenu/menu-submenu.component.html
+++ b/src/app/shares/menu-submenu/menu-submenu.component.html
@@ -30,7 +30,7 @@
             <h4>{{user.name}}</h4>
             <p class="text-muted">{{user.email}}</p>
             
-              <a  mat-raised-button color = "warn" [routerLink]="['/dashboard/profile']">View Profile</a>
+              <a  mat-raised-button color = "warn" [routerLink]="['/user/profile']">View Profile</a>
              
           </div>
     
