--- a/src/app/pages/maintenance/edit/add-edit-doctors/add-edit-doctors.component.html
+++ b/src/app/pages/maintenance/edit/add-edit-doctors/add-edit-doctors.component.html
@@ -1,11 +1,24 @@
-<h1>Edit Doctor</h1>
-<div class="container">
-  <app-card-edit-img [refobj] = "doctor"></app-card-edit-img>
+<h1>Edit/Add Doctors</h1>
+<div class="title">
+  <app-back></app-back>
+  <button id= "btnRegister" mat-raised-button color="primary" (click)="refresh()"  *ngIf="update == true && id == 'new'">
+    <mat-icon>add</mat-icon>
+   Add new Doctor
+  </button>
+</div>
+
+<div  *ngIf="error"  class="error">
+  <mat-icon>warning</mat-icon>
+  {{error}}
+</div>
+
+<div class="container"  *ngIf="!error">
+  <app-card-edit-img [refobj] = "doctor"   *ngIf="doctor" ></app-card-edit-img>
  
     <mat-card class="card-edit">
         <mat-card-header>
-            <mat-card-title>User Data</mat-card-title>
-            <mat-card-subtitle>Modify your data, if you wish.</mat-card-subtitle>
+            <mat-card-title>Doctor Data</mat-card-title>
+            <mat-card-subtitle>Modify or add data of a doctor, if you wish.</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content> 
           <form [formGroup]="fGroupEditDataDoctor" class="formedit" (submit)="updateDoctor()">
@@ -64,5 +77,5 @@
     </mat-card>
     
    
-  
+    <app-back></app-back>
 </div>
