--- a/src/app/pages/maintenance/edit/add-edit-hospital/add-edit-hospital.component.html
+++ b/src/app/pages/maintenance/edit/add-edit-hospital/add-edit-hospital.component.html
@@ -1,1 +1,77 @@
-<p>add-edit-hospital works!</p>
+<h1>Edit/Add Hospital</h1>
+<div class="title">
+  <app-back></app-back>
+  <button id= "btnRegister" mat-raised-button color="primary" class="back" (click)="refresh()"  *ngIf="update == true && id == 'new'">
+    <mat-icon>add</mat-icon>
+   Add new Hospital
+  </button>
+</div>
+
+<div  *ngIf="error"  class="error">
+    <mat-icon>warning</mat-icon>
+    {{error}}
+</div>
+
+<div class="container" *ngIf="!error">
+
+  <app-card-edit-img [refobj] = "hospital"   *ngIf="hospital"></app-card-edit-img>
+ 
+    <mat-card class="card-edit" >
+        <mat-card-header>
+            <mat-card-title>Hospital Data</mat-card-title>
+            <mat-card-subtitle>Modify this data, if you wish.</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content> 
+          <form [formGroup]="fGroupEditDataHospital" class="formedit" >
+        
+
+             <mat-form-field class="full-width" appearance="outline">
+                <mat-label>Name</mat-label>
+                <input type="text" matInput [formControl]="name" placeholder="Name and Last Name" >
+                <mat-error *ngIf="name.hasError('minlength') && !name.hasError('required')">
+                  Please enter a valid Name of the Hospiotal.
+                </mat-error>
+                <mat-error *ngIf="name.hasError('required')">
+                  Name and Last Name is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+              <mat-form-field class="full-width" appearance="outline">
+                <mat-label>Descripcion</mat-label>
+                <input type="text" matInput [formControl]="description" placeholder="Name and Last Name" >
+                <mat-error *ngIf="name.hasError('minlength') && !name.hasError('required')">
+                  Please enter a valid Description of the Hospiotal.
+                </mat-error>
+                <mat-error *ngIf="name.hasError('required')">
+                  Description is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+             
+             
+    
+               
+                  
+    
+                
+                  <button  *ngIf="update == true" type="submit" (click)="updateHospital()"
+                  id= "btnRegister" mat-raised-button color="primary" focus  [disabled]="disabledbtn" class="full-width">
+                      Update hospital's name
+                 </button>
+                 <button *ngIf="update == false" type="submit"   (click)="addHospital()"
+                 id= "btnRegister" mat-raised-button color="primary" focus  [disabled]="disabledbtn" class="full-width">
+                    Add new hospital
+               </button>
+    
+                    
+                </form>
+              
+    
+          
+      </mat-card-content>
+      
+    </mat-card>
+    
+   
+    <app-back></app-back>  
+</div>
+
+
