--- a/src/app/pages/maintenance/hospitals/hospitals.component.html
+++ b/src/app/pages/maintenance/hospitals/hospitals.component.html
@@ -1,67 +1,84 @@
-<mat-form-field>
+<!-- <mat-form-field>
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-  </mat-form-field>
-  <ng-container *ngIf="hospitales; else elseTemplate">
-    
-      <div class="mat-elevation-z8"   >
-        <table mat-table [dataSource]="dataSource" matSort>
-      
-       
-      
-          <!-- Progress Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}}</td>
-          </ng-container>
-      
-          <!-- Name Column -->
-          <ng-container matColumnDef="img">
-            <th mat-header-cell *matHeaderCellDef > Imagen </th>
-            <td mat-cell *matCellDef="let row"> 
-                <app-cargar-img [url]="row.getURLImg()"></app-cargar-img>
-               
-             </td>
-          </ng-container>
-      
-          <!-- Fruit Column -->
-           <ng-container matColumnDef="usuario">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Register by </th>
-            <td mat-cell *matCellDef="let row"> {{row.usuario.name}} </td>
-          </ng-container>
-          
-          
+</mat-form-field> -->
+<h1>List of hospitals</h1>
+<div class="title">
+  <app-back></app-back>
+  <button mat-raised-button color="primary" class="back" routerLink="/admin/edit-hospital/new">
+    <mat-icon>add</mat-icon>
+   New Hospital
+  </button>
+</div>
 
-           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef > Actions</th>
-            <td mat-cell *matCellDef="let row" class = "actions">  
-                <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon "
-                 matTooltip="Edit doctor" matTooltipPosition= "right" [routerLink]="['../edit-doctor', row.id]">
-                    <mat-icon>edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon" 
-                  matTooltip="Delete doctor" matTooltipPosition= "right">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-            </td>
-          </ng-container> 
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-          </tr>
-        </table>
-      
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-      </div>
-  </ng-container>
-  <ng-template #elseTemplate>
+
+<div class="mat-elevation-z8">
+  <ng-container *ngIf="isloading; else elseTemplate">
+
     <mat-spinner>
     </mat-spinner>
     
-  </ng-template>
+  </ng-container>
+  <ng-template #elseTemplate>
+    <table mat-table [dataSource]="data" class="example-table">
   
+      <!-- ID Column -->
+      <ng-container matColumnDef="img">
+        <th mat-header-cell *matHeaderCellDef class="th-img"> Foto </th>
+        <td mat-cell *matCellDef="let row"> 
+            <app-cargar-img [url]="row.getURLImg()"></app-cargar-img>
+            
+        </td>
+      </ng-container>
   
+      <!-- Progress Column -->
+      <ng-container matColumnDef="name" class="name">
+        <th mat-header-cell *matHeaderCellDef class="th-name" > Hospital's name </th>
+        <td mat-cell *matCellDef="let row">  {{row.name | slice:0:20 }}{{(row.name.length > 20)? '...':'' }} </td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="usuario" >
+        <th mat-header-cell *matHeaderCellDef class="th-name" > register by </th>
+        <td mat-cell *matCellDef="let row">  {{row.usuario.email | slice:0:20 }}{{(row.usuario.email.length > 20)? '...':'' }} </td>
+      </ng-container>
+  
+     
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef class="th-actions"> Actions</th>
+        <td mat-cell *matCellDef="let row" >  
+          <button mat-icon-button color="accent" aria-label="Example icon button with a menu icon "
+            matTooltip="View hospital" matTooltipPosition= "right" [routerLink]="['/user/view-hospital', row.id]">
+                <mat-icon>visibility</mat-icon>
+            </button>
+            <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon "
+            matTooltip="Edit hospital" matTooltipPosition= "right" [routerLink]="['../edit-hospital', row.id]">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon" 
+              matTooltip="Delete doctor" matTooltipPosition= "right" (click)="deletehospital(row.id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+        </td>
+      </ng-container> 
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+  
+      <!-- Row shown when there is no matching data. -->
+      <!-- <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr> -->
+    </table>
+</ng-template>
+
+  <mat-paginator  #paginator [length]="resultsLength" [pageSizeOptions]="pageSizes"  aria-label="Select page of users"></mat-paginator> 
+</div>
+<app-back></app-back>
+
+
+
+
+
+
