--- a/src/app/pages/maintenance/users/users.component.html
+++ b/src/app/pages/maintenance/users/users.component.html
@@ -2,8 +2,8 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
 </mat-form-field> -->
-
-
+<h1>List of patients</h1>
+<app-back></app-back>
 <div class="mat-elevation-z8">
   <ng-container *ngIf="isloading; else elseTemplate">
 
@@ -12,11 +12,11 @@
     
   </ng-container>
   <ng-template #elseTemplate>
-    <table mat-table [dataSource]="data" class="example-table">
+    <table mat-table [dataSource]="data" >
   
       <!-- ID Column -->
       <ng-container matColumnDef="img">
-        <th mat-header-cell *matHeaderCellDef > Foto </th>
+        <th mat-header-cell *matHeaderCellDef class="th-img"> Foto </th>
         <td mat-cell *matCellDef="let row"> 
             <app-cargar-img [url]="row.getURLImg()"></app-cargar-img>
             
@@ -24,31 +24,31 @@
       </ng-container>
   
       <!-- Progress Column -->
-      <ng-container matColumnDef="name" class="name">
-        <th mat-header-cell *matHeaderCellDef > Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      <ng-container matColumnDef="name" >
+        <th mat-header-cell *matHeaderCellDef class="th-name" > Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name | slice:0:30 }}{{(row.name.length > 30)? '...':'' }} </td>
       </ng-container>
   
       <!-- Name Column -->
-      <ng-container matColumnDef="email" class="email">
-        <th mat-header-cell *matHeaderCellDef > email </th>
-        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef class="th-name" > email </th>
+        <td mat-cell *matCellDef="let row"> {{row.email | slice:0:30 }}{{(row.email.length > 30)? '...':'' }}</td>
       </ng-container>
   
-      <ng-container matColumnDef="rol" class="rol">
-        <th mat-header-cell *matHeaderCellDef > rol </th>
+      <ng-container matColumnDef="rol" >
+        <th mat-header-cell *matHeaderCellDef class="th-name" > rol </th>
         <td mat-cell *matCellDef="let row"> {{row.rol}} </td>
       </ng-container>
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef class="actions"> Actions</th>
+        <th mat-header-cell *matHeaderCellDef class="th-actions"> Actions</th>
         <td mat-cell *matCellDef="let row" >  
             <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon "
-            matTooltip="Edit doctor" matTooltipPosition= "right" [routerLink]="['../edit-doctor', row.id]">
+            matTooltip="Edit doctor" matTooltipPosition= "right" [routerLink]="['../edit-user', row.id]">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon" 
-              matTooltip="Delete doctor" matTooltipPosition= "right">
+              matTooltip="Delete doctor" matTooltipPosition= "right" (click)="deleteUser(row.id)" >
                 <mat-icon>delete</mat-icon>
               </button>
         </td>
@@ -69,7 +69,7 @@
   
 </div>
 
-
+<app-back></app-back>
 
 
 
