--- a/src/app/pages/maintenance/view/view-hospital/view-hospital.component.html
+++ b/src/app/pages/maintenance/view/view-hospital/view-hospital.component.html
@@ -9,9 +9,9 @@
     {{error}}
 </div>
 
-<div class="container" *ngIf="!error">
+<div class="container" *ngIf="hospital">
 
-  <app-showimg [refobj] = "hospital"   *ngIf="hospital"></app-showimg>
+  <app-showimg [refobj] = "hospital" ></app-showimg>
  
     <mat-card class="card-edit" >
         <mat-card-header>
