--- a/src/app/shares/sidebar/sidebar.component.html
+++ b/src/app/shares/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="title-sidebar">
+<div class="title-sidebar" *ngIf="user">
 
   <button mat-icon-button  aria-label="icon-button with a menu">
     <div class="smoll-img-sidebar">
