--- a/src/app/component/showimg/showimg.component.css
+++ b/src/app/component/showimg/showimg.component.css
@@ -1,8 +1,10 @@
 .img-circle {
     /* border-radius: 50%; */
-    width: 250px; 
-    height: 250px;
+    width: 350px; 
+    height: 350px;
     object-fit: contain;
+    border: 1px solid black;
+    object-fit: cover;
     
   }
   .imgcontainer {
@@ -10,14 +12,14 @@
     justify-content: center;
     width: 100%;
   }
-  .img-circle {
-    /* border-radius: 50%; */
-    width: 250px; 
-    height: 250px;
-    object-fit: contain;
-    
+
+  .imgcard {
+    height: min-content;
   }
   .example-header-image {
     background-image: url('../../../assets/img/user/anonimos-smoll.png');
     background-size: cover;
+  }
+  .card-editimg {
+    height: 100%;
   }
