--- a/src/app/pages/maintenance/users/users.component.html
+++ b/src/app/pages/maintenance/users/users.component.html
@@ -44,11 +44,11 @@
         <th mat-header-cell *matHeaderCellDef class="th-actions"> Actions</th>
         <td mat-cell *matCellDef="let row" >  
             <button mat-icon-button color="primary" aria-label="Example icon button with a menu icon "
-            matTooltip="Edit doctor" matTooltipPosition= "right" [routerLink]="['../edit-user', row.id]">
+            matTooltip="Edit user" matTooltipPosition= "right" [routerLink]="['../edit-user', row.id]">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon" 
-              matTooltip="Delete doctor" matTooltipPosition= "right" (click)="deleteUser(row.id)" >
+              matTooltip="Delete user" matTooltipPosition= "right" (click)="deleteUser(row.id)" >
                 <mat-icon>delete</mat-icon>
               </button>
         </td>
